# gridflux

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  LICENSE.rtf  Makefile  README.md  WINDOWS_QUICK_REFERENCE.md  cmake_install.cmake  config.default.json  debug_x11  debug_x11.c  gridflux  gridflux-cli  gridflux-gui  gridflux-gui.manifest  gridflux-gui.rc  gridflux-installer.nsi  gridflux-launcher.manifest  gridflux-launcher.vbs  gridflux.desktop  gridflux.desktop.in  gridflux.dev.manifest  gridflux.dev.rc  gridflux.manifest  gridflux.rc  gridflux.wxs  reorg.py  split_wm.py
.github/workflows/: ci.yml
include/core/: geometry.h  interfaces.h  types.h  window_manager.h  workspace.h
include/platform/x11/: x11_atoms.h  x11_backend.h  x11_window_manager.h
include/utils/: collections.h  list.h  memory.h  workspace.h
scripts/: binary_builder.bat  install.bat  install.sh  package.sh  setup-hooks.sh  uninstall.sh
scripts/git-hooks/: pre-commit
src/: client.c  config.c  config.h  ewmh.c  ewmh.h  file.c  gridflux.c  gui.c  internal.h  ipc.h  ipc_command.c  ipc_command.h  layout.c  layout.h  list.c  list.h  logger.h  main.c  memory.c  memory.h  platform_compat.h  types.h  window_manager.c  window_manager.h  xwm.c  xwm.h
src/cli/: main.c
src/config/: config.c  config.h  rules.c  rules.h
src/core/: arrange.c  border.c  border.h  config.c  config.h  debug.c  events.c  geometry.c  geometry.h  interfaces.h  internal.h  layout.c  layout.h  logger.c  logger.h  resize.c  types.h  window.c  window_manager.c  window_manager.h  wm.c  wm.h  workspace.c  workspace.h
src/gui/: app_state.h  gui.c
src/gui/bridge/: ipc_client.c  ipc_client.h  process_manager.h  refresh.c  refresh.h
src/gui/bridge/unix/: process_manager.c
src/gui/bridge/windows/: process_manager.c
src/gui/panels/: rules_panel.c  rules_panel.h  settings_panel.c  settings_panel.h  window_panel.c  window_panel.h  workspace_panel.c  workspace_panel.h
src/gui/platform/: async.c  async.h  gui_platform.h
src/gui/platform/unix/: gui_platform.c
src/gui/platform/windows/: gui_platform.c
src/gui/utils/: icon_win32.c  icon_win32.h
src/gui/widgets/: workspace_card.c  workspace_card.h
src/gui/window/: main_window.c  main_window.h  statusbar.c  statusbar.h  toolbar.c  toolbar.h  tray.c  tray.h
src/ipc/: ipc.h  ipc_command.c  ipc_command.h
src/launcher/: gridflux-launcher.rc  win32.c
src/platform/: platform.h  platform_compat.h  platform_env.c
src/platform/kwin/: kwin_backend.c  kwin_backend.h  kwin_tiler.qml  main.qml  metadata.json  tiler.js
src/platform/kwin/code/: tiler.js
src/platform/linux/: atoms.c  atoms.h  backend.h  platform.c  platform.h
src/platform/linux/kwin/: kwin.c  kwin_backend.c
src/platform/linux/kwin/code/: tiler.js
src/platform/linux/mutter/: extension.js
src/platform/unix/: atoms.c  atoms.h  backend.h  border.c  dock.c  gesture.c  gesture.h  internal.c  internal.h  ipc.c  keymap.c  platform.c  platform.h  window.c  workspace.c
src/platform/unix/kwin/: kwin.c  main.qml  tiler.js
src/platform/unix/mutter/: extension.js  metadata.json
src/platform/windows/: border.c  dock.c  internal.c  internal.h  ipc.c  keymap.c  platform.c  platform.h  resize.c  window.c  workspace.c
src/platform/x11/: x11_atoms.c  x11_atoms.h  x11_backend.h  x11_gnome.c  x11_kde.c  x11_window_manager.c  x11_window_manager.h
src/server/: main.c
src/utils/: collections.c  file.c  file.h  list.c  list.h  logger.c  logger.h  memory.c  memory.h  workspace.c
tests/: framework.h  mock_platform.c  mock_platform.h  test_wm_watch.c
